<resources>
    <string name="app_name">Mobile Tracker</string>
    <string name="title_activity_main_map">Map</string>
    <string name="device_admin_description">Mobile Tracker requires administrative permission for it to be fully operable.
    With this permission you can lock and wipe your device when misplaced.</string>

    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already registered?</string>
    <string name="login">Login</string>
    <string name="password_optional">Password (Optional)</string>
    <string name="not_registered">Not Registered?</string>
    <string name="phone_number">Phone Number</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="add_device">Add Device</string>
    <string name="back">Back</string>
    <string name="title_activity_maps">Mobile Tracker</string>
    <string name="map">Map</string>
    <string name="find_device">Find Device</string>
    <string name="logout">Logout</string>

</resources>
