<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/reg_l"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.RegisterActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/reg_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="15dp" />

    <ProgressBar
        android:id="@+id/reg_pbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/prog_box"
        android:minWidth="250dp"
        android:minHeight="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/linearLayout"
        app:layout_constraintStart_toStartOf="@id/linearLayout"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="15dp"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_toolbar">

        <EditText
            android:id="@+id/reg_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_side"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginEnd="@dimen/margin_side"
            android:background="@drawable/input_box"
            android:elevation="8dp"
            android:hint="@string/first_name"
            android:textAlignment="center"
            android:textColor="@color/customTextColor" />

        <EditText
            android:id="@+id/reg_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_side"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginEnd="@dimen/margin_side"
            android:background="@drawable/input_box"
            android:elevation="8dp"
            android:hint="@string/last_name"
            android:textAlignment="center"
            android:textColor="@color/customTextColor" />

        <EditText
            android:id="@+id/reg_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_side"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginEnd="@dimen/margin_side"
            android:background="@drawable/input_box"
            android:elevation="8dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColor="@color/customTextColor" />

        <EditText
            android:id="@+id/reg_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_side"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginEnd="@dimen/margin_side"
            android:background="@drawable/input_box"
            android:elevation="8dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textAlignment="center"
            android:textColor="@color/customTextColor" />


        <EditText
            android:id="@+id/reg_pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_side"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginEnd="@dimen/margin_side"
            android:background="@drawable/input_box"
            android:elevation="8dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/customTextColor" />

        <EditText
            android:id="@+id/reg_cpass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_side"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginEnd="@dimen/margin_side"
            android:background="@drawable/input_box"
            android:elevation="8dp"
            android:hint="Confirm Password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/customTextColor" />

        <Button
            android:id="@+id/reg_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_side"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginEnd="@dimen/margin_side"
            android:background="@drawable/button_bg_rounded_corners"
            android:elevation="12dp"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="@color/btn_text_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/already_registered"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/go_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>